--- a/lib/stylesheets/canon/patterns/_menus.scss
+++ b/lib/stylesheets/canon/patterns/_menus.scss
@@ -3,44 +3,63 @@
   position: relative;
   display: inline-block;
 
-  a,
-  .rs-dropdown-link,
   .rs-dropdown-text {
+    color: $grey800;
     white-space: nowrap;
+    font-family: 'Roboto Light';
   }
+
+  a,
+  .rs-dropdown-link {
+    color: $grey800;
+    white-space: nowrap;
+    font-family: 'Roboto Light';
+    outline: none;
+
+    &:hover,
+    &.hover {
+      background-color: $grey600;
+      color: $grey0;
+      text-decoration: none;
+    }
+  }
+}
+
+.rs-nav .rs-dropdown-menu {
+  z-index: $zindexMenu;
 }
 
 .rs-dropdown-menu {
   position: absolute;
-  margin: 0;
-  padding: 3px 0;
+  margin: -1px 0 0 0;
+  padding: 0.25em 0 0.625em 0;
   min-width: 100%;
-  background-color: #fff;
-  border: 1px solid $grey400;
-  border-radius: 3px;
-  box-shadow: 0 0 9px 2px rgba(0, 0, 0, 0.2);
+  background-color: $grey50;
+  border: 1px solid $cyan900;
+  border-radius: 0px 3px 3px 3px;
   list-style: none;
-  z-index: $zindexMenu;
+  z-index: $zindexPopovers+1;
 
   @include animate-visibility;
 
   a,
   .rs-dropdown-link {
     display: block;
-    padding: 0 7px;
+    padding: 0 0.875em;
   }
 
   &.rs-pull-right {
     right: 0;
+    border-radius: 3px 0px 3px 3px;
   }
 }
 
 .rs-dropdown-category {
   display: block;
-  margin: 5px 0 0;
-  padding: 0 7px;
-  color: #999;
-  font-size: 10px;
+  margin: 0.875em 0 0 0;
+  padding: 0 1.5em;
+  color: $grey600;
+  font-size: 0.625em;
   font-weight: bold;
   text-transform: uppercase;
   white-space: nowrap;
@@ -49,7 +68,7 @@
 .rs-dropdown-item.disabled {
   a,
   .rs-dropdown-link {
-    color: $grey300;
+    color: $grey400;
     cursor: default;
     text-decoration: none;
   }
@@ -72,58 +91,58 @@
 /** Primary Menu **/
 .rs-primary-dropdown {
   .rs-dropdown-menu {
-    padding: 0 0 10px;
+    padding: 0 0 0.875em;
     border: 0;
     border-radius: 0 0 3px 3px;
-    border-top: 2px solid $red;
+    background-color: $grey975;
+    position: absolute;
+    top: 100%;
+    left: 0;
 
     a,
     .rs-dropdown-link {
-      padding: 2px 15px;
-      color: #333;
-      font-family: $alt-font-family;
-      font-size: 16px;
-      font-weight: 600;
+      padding: 0.125em 1em;
+      color: $grey600;
       text-decoration: none;
 
       &:hover,
       &.hover,
       &:focus,
       &.focus {
-        color: $red;
-        background-color: #f5f5f5;
+        color: $grey500;
+        background-color: $grey950;
       }
     }
 
     > li:first-child,
     > .rs-dropdown-item:first-child {
-      margin-top: 12px;
+      margin-top: 0.875em;
     }
   }
 
   .rs-dropdown-category {
-    padding: 0 15px;
-    font-family: $alt-font-family;
-    font-size: 12px;
-    font-weight: 200;
+    padding: 0 1.4em;
+    margin: 0.875em 0 0 0;
+    @extend .extra-small;
+    color: $grey800;
+    letter-spacing: 0.05em;
   }
 
   .rs-dropdown-category,
   .rs-dropdown-menu > li:first-child > .rs-dropdown-category,
   .rs-dropdown-menu > .rs-dropdown-item:first-child > .rs-dropdown-category {
-    margin: 12px 0 0;
+    margin: 0.875em 0 0;
   }
 
   .rs-dropdown-caption {
     display: block;
     color: $grey400;
-    font-family: $alt-font-family;
-    font-size: 12px;
-    font-weight: 200;
+    font-size: 0.875em;
   }
 
   .rs-icon-external {
-    @include sprite($external);
+    @extend .rs-icon;
+    @extend .rs-icon-external-link;
   }
 
   .rs-dropdown-item.disabled {
@@ -143,25 +162,30 @@
 /** Utility Menu **/
 .rs-utility-dropdown {
   .rs-dropdown-menu {
+    border-radius: 0 0 3px 3px;
     border-top: none;
-    background: #333;
+    border-color: $grey900;
+    background: $grey1000;
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing: antialiased;
     font-smoothing: antialiased;
-    padding: 8px 0;
+    padding: 0.875em 0;
+    margin: 0;
 
     span,
     .rs-dropdown-text {
-      color: #ccc;
-      padding: 2px 15px;
+      color: $grey600;
+      padding: 0.125em 1em;
       text-decoration: none;
     }
 
     a,
     .rs-dropdown-link {
-      color: #ccc;
-      padding: 2px 15px;
+      color: $grey600;
+      padding: 0.125em 1em;
+      font-family: 'Roboto Regular';
       text-decoration: none;
+      @extend .small;
 
       .rs-icon-external-dark {
         visibility: hidden;
@@ -171,51 +195,51 @@
       &.hover,
       &:focus,
       &.focus {
-        color: #fff;
-        background-color: #444;
+        color: $grey0;
+        background-color: $grey950;
 
         .rs-icon-external-dark {
           visibility: visible;
 
-          @include sprite($external-dark-hover);
+          @extend .rs-icon;
+          @extend .rs-icon-external-link;
         }
       }
     }
 
     .rs-dropdown-caption {
       display: block;
-      color: $grey400;
-      font-family: $alt-font-family;
-      font-size: 12px;
+      color: $grey700;
+      line-height: 1.4em;
+      margin-bottom: 0.5em;
+      font-size: 0.875em;
       padding: 0;
     }
   }
 
   .rs-divider {
     padding: 0;
-    margin: 7px 0 8px;
+    margin: 0.5em 0 0.5em;
     height: 1px;
-    background: #000;
-    border-bottom: 1px solid #434343;
+    background: $grey1000;
+    border-bottom: 1px solid $grey900;
   }
 
   .rs-dropdown-category {
-    margin: 7px 0 0;
-    padding: 0 15px;
-    font-family: $alt-font-family;
-    font-size: 12px;
-    font-weight: 200;
+    margin: 0.5em 0 0;
+    padding: 0 1em;
+    font-size: 0.875em;
   }
 
   .rs-dropdown-item.disabled {
     a,
     .rs-dropdown-link {
-      color: $grey500;
+      color: $grey700;
       background-color: transparent;
     }
 
     .rs-dropdown-caption {
-      color: $grey500;
+      color: $grey700;
     }
   }
 }
