--- a/lib/stylesheets/canon/patterns/_tooltip.scss
+++ b/lib/stylesheets/canon/patterns/_tooltip.scss
@@ -8,10 +8,8 @@
 }
 
 .rs-tooltip-inner {
-  max-width: 440px;
-  padding: 10px;
-  background-color: #f5f5f5;
-  border: 1px solid #bbb;
-
-  box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.15);
+  max-width: 27.5em;
+  padding: 0.875em;
+  background-color: $grey0;
+  border: 1px $grey300 solid;
 }
